--- a/login.html
+++ b/login.html
@@ -4,23 +4,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login Page</title>
+    <title>Login</title>
     <link rel="stylesheet" href="styles/login.css">
-    <script src="scripts/validate_login.js"></script>
 </head>
 
 <body>
 
     <div class="login-container">
         <h2>Login</h2>
-        <form class="login-form" action="scripts/login.php" method="post" onsubmit="return validateForm()">
+        <form class="login-form" action="scripts/login.php" method="post">
             <div class="form-group">
                 <label for="username">Username:</label>
-                <input type="text" id="username" name="username" required maxlength="30">
+                <input type="text" id="username" name="username" required maxlength="20">
             </div>
             <div class="form-group">
                 <label for="password">Password:</label>
-                <input type="password" id="password" name="password" required maxlength="255">
+                <input type="password" id="password" name="password" required maxlength="100">
             </div>
             <div class="form-group">
                 <input type="submit" value="Login">
