--- a/signup.html
+++ b/signup.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/signup.css">
     <script defer src="scripts/validate_signup.js"></script>
-    <title>Signup Page</title>
+    <title>Signup</title>
 </head>
 <body>
     <div class="container">
@@ -14,13 +14,13 @@
             <input type="email" id="email" name="email" required maxlength="50">
 
             <label for="username">Username:</label>
-            <input type="text" id="username" name="username" required maxlength="30">
+            <input type="text" id="username" name="username" required maxlength="20">
 
             <label for="password">Password:</label>
-            <input type="password" id="password" name="password" required maxlength="255">
+            <input type="password" id="password" name="password" required maxlength="100">
 
             <label for="confirmPassword">Confirm Password:</label>
-            <input type="password" id="confirmPassword" name="confirmPassword" required maxlength="255">
+            <input type="password" id="confirmPassword" name="confirmPassword" required maxlength="100">
 
             <button type="submit">Sign Up</button>
         </form>
